# kestrel

./: .dockerignore  .gitignore  .jscpd.json  .pre-commit-config.yaml  .quartermaster.toml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yml  backends.toml.example  config.toml.example  contract.md  cspell.json  docker-compose.egress.yml  docker-compose.yml
.claude/: settings.json
.claude/hooks/: qm-edit-reminder.sh  qm-prompt-reminder.sh  qm-record-resolve.sh
.github/workflows/: release.yml  testing.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/specs/000-baseline/: spec.md
.specify/specs/001-dx-dev-defaults-assets/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/002-github-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/003-jira-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/004-task-source-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  .importlinter  .vulture_allowlist.py  README.md  pyproject.toml
backend/.dispatcher-workspaces/session-9eb5e83a/: poem.txt
backend/.dispatcher-workspaces/session-b1f3588c/: poem.txt
backend/.dispatcher-workspaces/session-c2c3b866/: poem.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_workflow_tables.py  0003_notification_table.py  0004_session_created_at.py  0005_workflow_step_refine_round.py  0006_ingestion.py  0007_jira_ingestion.py  0008_workflow_artifact_dir.py  0009_workflow_step_verify_round.py  0010_notification_issue_number_nullable.py
backend/app/: __main__.py  cli.py  config.py  config_models.py  health.py  logging_config.py  main.py  middleware.py  models.py  models_workflow.py  notifications.py  policy.py  ports.py  profiles.py  questionnaire.py  schemas.py  sse.py  telemetry.py
backend/app/backends/: __init__.py  base.py  claude_cli.py  openai_compat.py  opencode.py  registry.py
backend/app/persistence/: __init__.py  db.py  dismissal_store.py  notification_store.py  store.py  tables.py  webhook_delivery_store.py  workflow_store.py
backend/app/routers/: github_webhook.py  notifications.py  sessions.py  workflows.py
backend/app/services/: checks.py  egress.py  exceptions.py  git.py  github.py  gitlab.py  ingestion.py  jira.py  jira_poll.py  poll_source.py  reconcile.py  runner.py  sessions.py  workflow_text.py  workflows.py
backend/app/storage/: notification_bus.py  registry.py  workflow_bus.py  workflow_registry.py
backend/tests/: conftest.py  test_api_auth.py  test_autonomous_no_gate.py  test_backends.py  test_buses.py  test_check_runner.py  test_claude_backend.py  test_cli.py  test_config.py  test_dismissal_store.py  test_egress.py  test_git_service.py  test_github_client.py  test_github_notifier.py  test_github_ports.py  test_gitlab_code_host.py  test_health.py  test_ingestion_logging.py  test_ingestion_service.py  test_jira_client.py  test_jira_ingestion_recovery.py  test_jira_poll.py  test_jira_repo_resolution.py  test_logging_config.py  test_main.py  test_middleware.py  test_migration_0007.py  test_models.py  test_notifications.py  test_notifications_router.py  test_openai_backend.py  test_opencode_backend.py  test_persistence.py  test_policy.py  test_poll_source.py  test_prd_delivery.py  test_profiles.py  test_questionnaire.py  test_reconcile.py  test_refine_notifications.py  (+20 more)
docker/: entrypoint.sh
docker/egress/: squid.conf
docs/: architecture.md  backends.md  configuration.md  design-palette.md  development.md  getting-started.md  next-steps.md  observability.md  qm-alignment.md  releasing.md  security.md  setup-github-workflow.md  setup-jira-workflow.md  troubleshooting.md
docs/superpowers/plans/: 2026-06-30-agent-dispatcher-spike.md  2026-07-01-github-issue-workflow.md  2026-07-01-kestrel-m-a-foundation.md  2026-07-01-kestrel-m-b-orchestrator.md  2026-07-01-kestrel-m-c-github.md  2026-07-01-kestrel-m-d-interview.md  2026-07-01-kestrel-m-e-gates.md  2026-07-01-kestrel-m-f-implementation.md  2026-07-01-kestrel-m-g-ui.md  2026-07-01-kestrel-m-h-deferred.md  2026-07-02-kestrel-m-b-durable-workflows.md  2026-07-02-kestrel-m-d-questionnaires.md  2026-07-02-kestrel-m-e-refinement-gates.md  2026-07-02-kestrel-m-f-implementation-blockers.md  2026-07-03-kestrel-m-g-ui-ergonomics.md  kestrel-roadmap.md
docs/superpowers/specs/: 2026-06-30-agent-dispatcher-spike-design.md  2026-07-01-github-issue-workflow-design.md  2026-07-01-kestrel-design.md  2026-07-03-reconciler-consolidating-rewriter-design.md
frontend/: .dependency-cruiser.cjs  .env.example  .gitignore  eslint.config.js  index.html  knip.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/components/: ConsoleShell.vue  DiffView.vue  EventCard.vue  GithubLink.vue  NotificationCenter.vue  PanelError.vue  PanelLoading.vue  QuestionnaireForm.vue  SessionPanel.vue  WorkflowPanel.vue
frontend/src/composables/: useConnectivity.ts  useNotifications.ts  useSessions.ts  useWorkflows.ts
frontend/src/lib/: debounce.ts  deeplink.ts  eventView.ts  markdown.ts  questionnaire.ts
frontend/src/plugins/: icons.ts
frontend/src/styles/: theme.css
frontend/src/theme/: index.ts
frontend/src/types/: notifications.ts  questionnaire.ts  sessions.ts  workflows.ts
frontend/tests/api/: apiBase.test.ts  index.test.ts
frontend/tests/components/: GithubLink.test.ts  QuestionnaireForm.test.ts  WorkflowPanel.states.test.ts
frontend/tests/composables/: remove.test.ts  useConnectivity.test.ts  useNotifications.test.ts  useSessions.test.ts  useWorkflows.test.ts
frontend/tests/lib/: deeplink.test.ts  eventView.test.ts  markdown.test.ts  (+1 more)
scripts/: check_doc_line_length.sh  check_version_sync.sh  derive_channels.sh
tools/: agent-check.sh  check-config-guard.sh  quality.sh
(+21 files in other folders)
