[project]
name = "kestrel-backend"
version = "2026.7.5a2"
description = "Dispatch and monitor Claude Code CLI sessions from a web UI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
