[project]
name = "kestrel-backend"
version = "2026.7.5a3"
description = "Dispatch and monitor Claude Code CLI sessions from a web UI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

# Lint gate (see module-code-style-python). Run with `uvx ruff check .`;
# CI runs the same. Ruff is invoked via uvx rather than added as a dependency
# so the --frozen test install stays untouched.
[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
# E/W pycodestyle (incl. E501 line-length), F pyflakes, I import sorting.
select = ["E", "W", "F", "I"]
